<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Closet</string>
    <string name="splash_desc">Tu armario en el bolsillo</string>
    <string name="title_section1">Mis prendas</string>
    <string name="title_section2">Mis conjuntos</string>
    <string name="title_section3">Calendario</string>
    <string name="title_section4">Mis armarios</string>
    <string name="title_section5">Conoce tu armario</string>
    <string name="title_section6">Configuración</string>
    <string name="title_section7">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Menu items -->
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_close">Cerrar</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_save">Save</string>
    <!-- <string name="action_add">Añadir</string> -->
    <string name="action_search">Buscar</string>
    <string name="action_back">Volver</string>
    <string name="action_exit">Salir</string>
    <!-- Menu contextual -->
    <string name="action_remove">Eliminar</string>
    <string name="action_modify">Modificar</string>

    <!-- Buttons -->
    <string name="action_add">Añadir</string>
    <string name="action_delete">Eliminar</string>
    <string name="action_next">Siguiente</string>

    <!-- Add item -->
    <string name="txt_desc">Descripción</string>
    <string name="txt_cat">Categoría</string>
    <string name="txt_season">Temporada</string>
    <string name="txt_color">Color</string>
    <string name="txt_size">Talla</string>
    <string name="txt_price">Precio</string>
    <string name="txt_currency"> €</string>
    <string name="txt_when_buy">¿Cúandlo lo compraste</string>
    <string name="txt_where_buy">¿Dónde lo compraste</string>
    <string name="txt_color_info">Puedes añadir nuevos colores a la base de datos en la ventana de configuración</string>
    <string name="txt_invalid_description">No se ha introducido una descripción</string>
    <string name="txt_invalid_colors">Añada colores a la prenda</string>
    <string name="txt_invalid_size">Especifique una talla</string>

    <!-- Search -->
    <!-- <string name="txt_cat">Categoría</string> -->
    <!-- <string name="txt_color">Color</string> -->
    <!-- <string name="txt_season">Estación</string> -->
    <string name="txt_all">ALL</string>

    <!-- Configuration -->
    <string name="txt_default">Armario predegterminado</string>
    <!-- <string name="action_save">Guardar</string> -->
    <string name="txt_add_cat">Nueva categoría</string>
    <!-- <string name="action_add">Eliminar</string> -->
    <string name="txt_rename_cat">Cambiar el nombre</string>
    <string name="txt_newname_cat">Nuevo nombre</string>
    <!-- <string name="action_save">Guardar</string> -->
    <string name="txt_delete_cat">Eliminar categoría</string>
    <!-- <string name="action_delete">Eliminar</string> -->
    <string name="txt_add_color">Añadir color</string>
    <string name="txt_color_name">Nombre del color:</string>
    <string name="txt_pick_color">Pick a color:</string>
    <string name="txt_msg_color">Se ha añadido el color a la base de datos</string>

    <!-- Outfits -->
    <string name="txt_add_outfit">Nuevo conjunto</string>
    <string name="txt_outfit_name">Nombre del conjunto:</string>
    <string name="txt_outfit_added">La prenda se ha añadido al conjunto</string>

    <!-- Calendar -->
    <string name="txt_add_note">Nueva nota</string>
    <string name="txt_notes">Notas:</string>


    <!-- Menu items -->
    <string name="action_done">Done</string>
    <string name="action_see">Ver</string>

    <!-- Toast messages -->
    <string name="txt_remove">La prenda ha sido eliminada</string>

    <!-- Nombres de los items -->
    <string-array name="nav_drawer_items">
        <item>Seccion1</item>
        <item>Seccion2</item>
        <item>Seccion3</item>
        <item>Seccion4</item>
        <item>Seccion5</item>
        <item>Seccion6</item>
    </string-array>

    <!-- Content Description -->

    <string name="desc_list_item_icon">Item Icon</string>
    //categories
    <string name="catShirts">Camisetas</string>
    <string name="catPants">Pantalones</string>
    <string name="catUnderWear">Ropa interior</string>
    <string name="catCoats">Abrigos</string>
    <string name="catShoes">Zapatos</string>
    <string name="catJumper">Jerseys</string>
    <string name="catPijamas">Pijamas</string>
    <string name="catDress">Vestidos</string>
    <string name="catAccesories">Complementos</string>

    <string-array name="categoryArrays">
        <item>Camisetas</item>
        <item>Pantalones</item>
        <item>Ropa interior</item>
        <item>Abrigos</item>
        <item>Zapatos</item>
        <item>Jerseys</item>
        <item>Pijamas</item>
        <item>Vestidos</item>
        <item>Complementos</item>
    </string-array>

    <!-- Shops ???? tabla de la base de datos -->
    <string-array name="shopsArrays22">
        <item>Zara</item>
        <item>HM</item>
        <item>Primark</item>
        <item>Berska</item>
        <item>Stradivarius</item>
        <item>Mango</item>
        <item>Cortefield</item>
        <item>Espirit</item>
        <item>Kaymo</item>
    </string-array>

    <!-- Seasons -->
    <string name="season_pronpt">Choose a season</string>

    <string-array name="seasonsArrays2">
        <item>Primavera</item>
        <item>Verano</item>
        <item>Invierno</item>
        <item>Otoño</item>
    </string-array>
    <string-array name="searchSeasonsArrays">
        <item>All</item>
        <item>Primavera</item>
        <item>Verano</item>
        <item>Invierno</item>
        <item>Otoño</item>
    </string-array>
    //seasons
    <string name="seasonSpring">Primavera</string>
    <string name="seasonSummer">Verano</string>
    <string name="seasonWinter">Invierno</string>
    <string name="seasonAutumn">Otoño</string>

    <!-- Color list -->
    <string-array name="colorArrays2">
        <item>Red</item>
        <item>Blue</item>
        <item>Orange</item>
        <item>White</item>
        <item>Black</item>
        <item>Pink</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Aqua</item>
        <item>Green</item>
        <item>Other</item>
    </string-array>

    <!-- Color list -->
    <string-array name="searchColorArrays">
        <item>All</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Orange</item>
        <item>White</item>
        <item>Black</item>
        <item>Pink</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Aqua</item>
    </string-array>

    <!-- Statistics -->
    <string name="statistics_title">Estadísticas</string>
    <string name="statistics_total">Total: </string>
    <string name="statistics_value">Precio</string>
    <string name="statistics_category">Categorías</string>
    <string name="statistics_seasons">Estaciones</string>
    <string name="statistics_colors">Colores</string>
    <string name="statistics_shops">Tiendas</string>
    <string name="statistics_count">Numero de prendas</string>
    <string name="statistics_total_count">Número de prendas en tu armario: </string>
    <string name="statistics_see_graph">Ver la gráfica</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_item2">AddItem2</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_ac_category">AcCategory</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_ac_item_detail">AcItemDetail</string>
    <string name="title_activity_ac_item_photo">AcItemPhoto</string>
    <string name="title_activity_horizontal_list_view_demo">HorizontalListViewDemo</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="title_activity_ac_selectt_item">AcSelecttItem</string>
    <string name="title_activity_grid3">Grid3</string>

</resources>
