<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:id="@+id/etxtDesc">


    <ImageButton
        android:id="@+id/imgItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/txtDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_desc"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtDesc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_desc" />

    <TextView
        android:id="@+id/txtCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cat"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtCat2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cat" />

    <TextView
        android:id="@+id/txtColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_color"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtColor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_cat" />

    <TextView
        android:id="@+id/txtSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_size"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtSize2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_size" />

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_price"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtPrice2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_price" />

    <TextView
        android:id="@+id/txtWhen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_when_buy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtWhen2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_when_buy" />

    <TextView
        android:id="@+id/txtWhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_where_buy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtWhere2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_where_buy" />
</LinearLayout>
